# outputs-collection

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20240513_023253_create_base_tables.rs
src/: di.rs  lib.rs  main.rs
src/application/account/: authorization.rs  create_user.rs  login.rs  mod.rs
src/application/account/error/: authorization.rs  create_user.rs  login.rs  mod.rs
src/application/account/service/: authentication.rs  crypter.rs  mod.rs
src/application/account/service/error/: authentication.rs  crypter.rs  mod.rs
src/domain/model/: manuscript.rs  user.rs
src/domain/repository/: user.rs
src/domain/repository/error/: user.rs
src/infra/: db.rs  mod.rs  provider.rs
src/infra/entity/: mod.rs  prelude.rs  user.rs
src/infra/repository/: user.rs
src/presentation/: create_user.rs  login.rs  mod.rs  route.rs
src/presentation/error/: create_user.rs
src/presentation/middleware/: authorization.rs
src/presentation/middleware/error/: authorization.rs
src/presentation/sample/: greet.rs  greet_test.rs  mod.rs
