workspace = { members = ["migration"] }
[package]
name = "outputs-collection"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["macros"] }
chrono = "0.4.38"
dotenv = "0.15.0"
http-body-util = "0.1.1"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = "1.0.201"
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
